	    API change to pql_header() for this to work propperly - a 'force' option which
	    bypasses the 'if debug die' thing...
	  - When deleting a virtual host/webserver or physical host, don't try to show
	    the just deleted object! Unset the relevant variable(s) and show the object
	    'one step up'.
	  - Catch the '2.X' version (which is CVS - hopfully it's >2.4).

phpQLAdmin 2.3.6 Release (Mar  5 2007)
	Bug fixes
	  - Also removed lan password auth from samba, almost all windows users using at least win2k by this point and the lan man protocol
	    can be easily cracked
	  - Fixed the samba code to no longer rely on the mkntpasswd program, you can now download and use Crypt_CHAP from pear
	  - Fixed sudo plugin to display when selected
	  - Better regexp to try to find out if a value is a DN in include/pql_formating.inc:pql_format_table_single()' 
	  - If there's no web server containers, we must still return the list of physical hosts in
	    include/pql_websrv.inc:pql_websrv_get_data(). This so that we can retreive any QLC objects
	    in those physical hosts.
	  - Enclose all DN's in any ldapsearch command line within citation marks. This to escape any
	    space(s) in the DN's.
	  - In the file tables/host_details-websrv.inc, we need to check if physical_data is both
	    an array AND contain more than one entry (count() don't seem to work correctly if the
	    variable is unset/empty!).
	  - PHP parse error fixed in tables/host_details-websrv.inc.
	  - Don't use '$server_dn' in referencing the physical host (in tables/host_details-websrv.inc).
	    Use '$_REQUEST["host"]' instead (which is always set/correct).
	  - Make sure the link_url variable is unset before going through the Round-Robin stuff. This
	    so that we don't get the links from the PREVIOUS table entry (Rewrite Rules).
	  - Remove third param (server FQDN) to include/pql_search.inc:pql_get_automount_maps().