@@ -1,7 +1,7 @@
 <?php
 // attribute plugin for
 // deliverymode (delivery preferences)
-// $Id: attrib.deliverymode.inc,v 2.33 2007-02-26 11:00:46 turbo Exp $
+// $Id: attrib.deliverymode.inc,v 2.34 2007-07-13 11:12:04 turbo Exp $
 
 // {{{ attribute_check(type)
 function attribute_check($type) {
@@ -244,9 +244,11 @@ function attribute_save($type) {
 
 	switch($type) {
 	  case "fulldomain":
-		// Create a user search filter (only look for mail users - !?!?).
-		$filter  = "(&(".pql_get_define("PQL_CONF_REFERENCE_USERS_WITH", $_REQUEST["rootdn"])."=*)(";
-		$filter .= pql_get_define("PQL_ATTR_MAIL")."=*))";
+		// Create a user search filter
+		if(pql_get_define("PQL_CONF_USER_FILTER", $_REQUEST["rootdn"]))
+		  $filter = pql_get_define("PQL_CONF_USER_FILTER", $_REQUEST["rootdn"]);
+		else
+		  $filter  = pql_get_define("PQL_CONF_REFERENCE_USERS_WITH", $_REQUEST["rootdn"])."=*";
 
 		// Retreive all users in this branch/domain.
 	    $users   = $_pql->get_dn($_REQUEST["domain"], $filter);
